added introduction and features section
fully reponsive on all devices

--- a/index.html
+++ b/index.html
@@ -52,8 +52,80 @@
       </div>
     </div>
     <!-- hero section ends here -->
+
+    <!-- intro section starts from here -->
     <div class="intro-section">
-      <div class="intro-wrapper"></div>
+      <div class="container">
+        <h2>INTRODUCTION</h2>
+
+        <div class="intro-container">
+          <div class="intro-power">
+            <div class="hr-line"></div>
+            <h3>
+              Democratizing <br />Computational <br />Power <span>with</span
+              ><br />
+              Decentralized <br /><span>GPUs.</span>
+            </h3>
+          </div>
+          <div class="intro-wrapper">
+            <h3>Decentralised Gpu Network</h3>
+            <p>
+              DGPU revolutionizes computational resource sharing with a truly
+              decentralized GPU network, targeting the monopolistic challenges
+              posed by centralized GPU vendors. By mobilizing idle GPUs from
+              individuals globally, it democratizes access to vital
+              computational power for AI and ML advancements. This innovative
+              network supports sustainable development, reduces environmental
+              impact, and fosters a token-based economy that rewards
+              contributors.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- intro section ends here -->
+
+    <div class="features-container">
+      <div class="container">
+        <h2>FEATURES</h2>
+        <div class="features-wrapper">
+          <div>
+            <img src="/features-decentralize-image.png" />
+            <p><span>True</span>Decentralization</p>
+          </div>
+          <div>
+            <img src="/features-GPUpower-image.png" />
+            <p><span>Harnessing Idle </span>GPU Power</p>
+          </div>
+          <div>
+            <img src="/features-volunteer-image.png" />
+            <p><span>Volunteer </span>Computing Network</p>
+          </div>
+          <div>
+            <img src="/features-economic-image.png" />
+            <p><span>Economic </span>Incentives</p>
+          </div>
+          <div>
+            <img src="/features-comunity-image.png" />
+            <p><span>Community-Driven </span>Governance</p>
+          </div>
+        </div>
+        <div class="features-main">
+          <img src="/features-hr-lin.png" />
+          <p>
+            DGPU combats the issue of pseudo-decentralization in the blockchain
+            sphere by creating a network that harnesses the idle GPUs of users
+            worldwide, ensuring a genuinely decentralized platform for
+            computational resource sharing.
+          </p>
+          <a
+            href="https://unocha.exposure.co/gaza-i-cannot-take-any-more-deaths-ive-lost-too-many-loved-ones"
+            target="_blank"
+            >Learn More</a
+          >
+        </div>
+      </div>
     </div>
   </body>
 </html>
