--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/images/DGPU-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,14 +17,15 @@
     <!-- nav wrapper starts from here -->
 
     <div class="hero-BG">
+      <img class="hero-bg-main" src="/images/hero-bg.png" />
       <div class="container">
         <div class="nav-wrapper">
           <div>
-            <img src="/DGPU-logo.png" width="36px" height="38px" />
+            <img src="/images/DGPU-logo.png" width="36px" height="38px" />
             <h1>DGPU</h1>
           </div>
           <div>
-            <img src="/nav-menu-bar.png" />
+            <img src="/images/nav-menu-bar.png" />
             <p>GPU Tester</p>
             <p>Introduction</p>
             <p>Features</p>
@@ -43,10 +44,10 @@
               Advancing <br />Rendering with<br />
               Distributed <br />Blockchain GPUs
             </h2>
-            <img src="/gpu-button-img.png" />
+            <img src="/images/gpu-button-img.png" />
           </div>
           <div>
-            <img src="/hero-main-two-img.png" />
+            <img src="/images/hero-main-two-img.png" />
           </div>
         </div>
       </div>
@@ -54,78 +55,97 @@
     <!-- hero section ends here -->
 
     <!-- intro section starts from here -->
-    <div class="intro-section">
-      <div class="container">
-        <h2>INTRODUCTION</h2>
+    <div class="intro-features-main">
+      <img class="features-BG" src="/images/features-main-BG.png" />
+      <div class="intro-section">
+        <div class="container">
+          <h2>INTRODUCTION</h2>
 
-        <div class="intro-container">
-          <div class="intro-power">
-            <div class="hr-line"></div>
-            <h3>
-              Democratizing <br />Computational <br />Power <span>with</span
-              ><br />
-              Decentralized <br /><span>GPUs.</span>
-            </h3>
+          <div class="intro-container">
+            <div class="intro-power">
+              <div class="hr-line"></div>
+              <h3>
+                Democratizing <br />Computational <br />Power <span>with</span
+                ><br />
+                Decentralized <br /><span>GPUs.</span>
+              </h3>
+            </div>
+            <div class="intro-wrapper">
+              <h3>Decentralised Gpu Network</h3>
+              <p>
+                DGPU revolutionizes computational resource sharing with a truly
+                decentralized GPU network, targeting the monopolistic challenges
+                posed by centralized GPU vendors. By mobilizing idle GPUs from
+                individuals globally, it democratizes access to vital
+                computational power for AI and ML advancements. This innovative
+                network supports sustainable development, reduces environmental
+                impact, and fosters a token-based economy that rewards
+                contributors.
+              </p>
+            </div>
           </div>
-          <div class="intro-wrapper">
-            <h3>Decentralised Gpu Network</h3>
+        </div>
+      </div>
+
+      <!-- intro section ends here -->
+
+      <!-- features section starts from here -->
+
+      <div class="features-container">
+        <div class="container">
+          <h2>FEATURES</h2>
+          <div class="features-wrapper">
+            <div>
+              <img src="/images/features-decentralize-image.png" />
+              <p><span>True</span>Decentralization</p>
+            </div>
+            <div>
+              <img src="/images/features-GPUpower-image.png" />
+              <p><span>Harnessing Idle </span>GPU Power</p>
+            </div>
+            <div>
+              <img src="/images/features-volunteer-image.png" />
+              <p><span>Volunteer </span>Computing Network</p>
+            </div>
+            <div>
+              <img src="/images/features-economic-image.png" />
+              <p><span>Economic </span>Incentives</p>
+            </div>
+            <div>
+              <img src="/images/features-comunity-image.png" />
+              <p><span>Community-Driven </span>Governance</p>
+            </div>
+          </div>
+          <div class="features-main">
+            <img src="/images/features-hr-lin.png" />
             <p>
-              DGPU revolutionizes computational resource sharing with a truly
-              decentralized GPU network, targeting the monopolistic challenges
-              posed by centralized GPU vendors. By mobilizing idle GPUs from
-              individuals globally, it democratizes access to vital
-              computational power for AI and ML advancements. This innovative
-              network supports sustainable development, reduces environmental
-              impact, and fosters a token-based economy that rewards
-              contributors.
+              DGPU combats the issue of pseudo-decentralization in the
+              blockchain sphere by creating a network that harnesses the idle
+              GPUs of users worldwide, ensuring a genuinely decentralized
+              platform for computational resource sharing.
             </p>
+            <a
+              href="https://unocha.exposure.co/gaza-i-cannot-take-any-more-deaths-ive-lost-too-many-loved-ones"
+              target="_blank"
+              >Learn More</a
+            >
           </div>
         </div>
       </div>
     </div>
 
-    <!-- intro section ends here -->
+    <!-- features section ends here -->
 
-    <div class="features-container">
+    <!-- take section starts from here -->
+
+    <div class="take-wrapper">
+      <img class="take-BG" src="/images/take-section-BG.png" />
+
       <div class="container">
-        <h2>FEATURES</h2>
-        <div class="features-wrapper">
-          <div>
-            <img src="/features-decentralize-image.png" />
-            <p><span>True</span>Decentralization</p>
-          </div>
-          <div>
-            <img src="/features-GPUpower-image.png" />
-            <p><span>Harnessing Idle </span>GPU Power</p>
-          </div>
-          <div>
-            <img src="/features-volunteer-image.png" />
-            <p><span>Volunteer </span>Computing Network</p>
-          </div>
-          <div>
-            <img src="/features-economic-image.png" />
-            <p><span>Economic </span>Incentives</p>
-          </div>
-          <div>
-            <img src="/features-comunity-image.png" />
-            <p><span>Community-Driven </span>Governance</p>
-          </div>
-        </div>
-        <div class="features-main">
-          <img src="/features-hr-lin.png" />
-          <p>
-            DGPU combats the issue of pseudo-decentralization in the blockchain
-            sphere by creating a network that harnesses the idle GPUs of users
-            worldwide, ensuring a genuinely decentralized platform for
-            computational resource sharing.
-          </p>
-          <a
-            href="https://unocha.exposure.co/gaza-i-cannot-take-any-more-deaths-ive-lost-too-many-loved-ones"
-            target="_blank"
-            >Learn More</a
-          >
-        </div>
+        <img class="take-image" src="/images/take-section-image.png" />
       </div>
     </div>
+
+    <!-- take section ends here -->
   </body>
 </html>
