added all sections
only faqs remaining

--- a/index.html
+++ b/index.html
@@ -147,5 +147,50 @@
     </div>
 
     <!-- take section ends here -->
+
+    <!-- transform section starts from here -->
+
+    <div class="transfrom-wrapper">
+      <img class="transform-BG" src="/images/transform-BG.png" />
+      <div class="container">
+        <div class="transform-lead">
+          <div class="transform-main">
+            <h2>
+              Transforming Computational Power <br />with Global GPU
+              Decentralization
+            </h2>
+          </div>
+          <div class="footer">
+            <div class="footer-dpgu">
+              <div>
+                <img src="/public/images/footer-img-logo.png" />
+                <h1>DGPU</h1>
+              </div>
+              <p>
+                DGPU democratizes AI and ML development by harnessing a
+                decentralized network of idle GPUs, rewarding contributions with
+                DGPU tokens and ensuring equitable computational access.
+              </p>
+            </div>
+            <div class="footer-main">
+              <h2>Links</h2>
+              <p>GPU Tester</p>
+              <p>Introduction</p>
+              <p>Features</p>
+              <p>FAQ’s</p>
+            </div>
+            <div class="footer-main">
+              <h2>Find Us</h2>
+              <p>Telegram</p>
+              <p>Twitter</p>
+              <p>Linkedin</p>
+            </div>
+          </div>
+        </div>
+        <p class="footer-reserved">All right reserved 2024</p>
+      </div>
+    </div>
+
+    <!-- transform section ends here -->
   </body>
 </html>
