--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <div class="footer">
             <div class="footer-dpgu">
               <div>
-                <img src="/public/images/footer-img-logo.png" />
+                <img src="/images/footer-img-logo.png" />
                 <h1>DGPU</h1>
               </div>
               <p>
