--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
               Decentralization
             </h2>
           </div>
+          <!-- footer -->
           <div class="footer">
             <div class="footer-dpgu">
               <div>
@@ -174,7 +175,7 @@
                 DGPU tokens and ensuring equitable computational access.
               </p>
             </div>
-            <div class="footer-main">
+            <div class="footer-main footer-links">
               <h2>Links</h2>
               <a href="#hero-wrapper"> GPU Tester</a>
               <br />
@@ -184,11 +185,11 @@
               <br />
               <a href="#faqs">FAQ’s</a>
             </div>
-            <div class="footer-main">
+            <div class="footer-main social-links">
               <h2>Find Us</h2>
-              <p>Telegram</p>
-              <p>Twitter</p>
-              <p>Linkedin</p>
+              <a>Telegram</a>
+              <a>Twitter</a>
+              <a>Linkedin</a>
             </div>
           </div>
         </div>
