--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
         <div class="transform-lead">
           <div class="transform-main">
             <h2>
-              Transforming Computational Power <br />with Global GPU
-              Decentralization
+              Transforming Computational Power with Global GPU Decentralization
             </h2>
           </div>
           <!-- footer -->
@@ -178,11 +177,8 @@
             <div class="footer-main footer-links">
               <h2>Links</h2>
               <a href="#hero-wrapper"> GPU Tester</a>
-              <br />
               <a href="#intro-wrapper">Introduction</a>
-              <br />
               <a href="#features-wrapper">Features</a>
-              <br />
               <a href="#faqs">FAQ’s</a>
             </div>
             <div class="footer-main social-links">
