--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               Advancing <br />Rendering with<br />
               Distributed <br />Blockchain GPUs
             </h2>
-            <img src="/images/gpu-button-img.png" />
+            <img src="/images/gpu-button-img.png" draggable="false" />
           </div>
           <div>
             <img src="/images/hero-main-two-img.png" />
